# 800-Picacho-Lane-LUTs

./: .coverage  .gitignore  .pre-commit-config.yaml  .pylintrc  .static-analysis.md  =5.12,<6  LICENSE  Makefile  OPTIMIZATION_SUMMARY.md  PROCESSING_LOG.md  README.md  README_CLI_v1_3.md  SECURITY.md  TEST_FIXES_SUMMARY.md  board_material_aerial_enhancer.py  coastal_estate_render.py  code.ts  codebase_philosophy_auditor.py  color_science.py  coverage.xml  create_board_textures.py  decision_decay_dashboard.py  dreaming_pipeline.py  emergency_security_fixes.sh  enhance_aerial.py  enhance_pool_aerial.py  evolutionary_checkpoint.py  filter_nodes.py  golden_hour_courtyard_workflow.py  hdr_production_pipeline.sh  holographic_node.py  lux_render_pipeline.py  luxury_tiff_batch_processor.py  luxury_tiff_batch_processor_cli.py  luxury_video_master_grader.py  manifest.json  master_intelligence_pipeline.py  material_optimizer.py  material_property_substrate.py  material_property_substrate_enhanced.py  (+25 more)
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: README.md  build.yml  ci.yml  codeql-advanced.yml  codeql.yml  main.yml  optimized-ci.yml  pylint.yml  python-app.yml  shim-sync.yml  static-analysis.yml  summary.yml
.github/workflows/.github/workflows/: ci.yml
08_Documentation/: daily_review_2025-02-14.md  daily_review_2025-02-15.md  daily_review_2025-02-16.md  lantern_logo_component_spec.md  luxury_rendering_insights.md
08_Documentation/Version_History/: changelog.md
09_Client_Deliverables/Custom_Projects/: carolwood_executive_portrait_playbook.md  presence_compiler_annexes_v1.2.txt  presence_compiler_spec_v1.1.txt  presence_manifest_schema.json
09_Client_Deliverables/Lantern_Logo_Implementation_Kit/: README.md  lantern_logo.css  lantern_pixel_guard.py  lantern_tokens.json
docs/: board_material_aerial_enhancer_optimizations.md
examples/: benchmark_board_material.py  enhance_aerial_example.py  security_usage.md
luxury_tiff_batch_processor/: __init__.py  adjustments.py  cli.py  compat.py  io_utils.py  palettes.py  pipeline.py  profiles.py
presence_security_v1_2/: presence_cli_v1_2.py  presence_params.py  watermarking.py
src/: __init__.py  evolutionary.py  evolutionary_checkpoint.py
tests/: __init__.py  conftest.py  contest.py  documentation.py  test_api_guard_imports.py  test_board_material_aerial_enhancer.py  test_board_material_optimizations.py  test_cli_verbose_header.py  test_coastal_estate_render.py  test_codebase_philosophy_auditor.py  test_cognitive_material_response.py  test_decision_decay_dashboard.py  test_evolutionary_checkpoint.py  test_evolutionary_cli.py  test_evolutionary_shim.py  test_evolutionary_shim_guard.py  test_evolutionary_shim_lock.py  test_float_roundtrip.py  test_golden_hour_courtyard_workflow.py  test_gradient_lineage.py  test_holographic_node.py  test_lantern_logo_css.py  test_lantern_pixel_guard.py  test_lux_batch_cli_smoke.py  test_luxury_tiff_batch_processor.py  test_luxury_video_master_grader.py  test_material_response.py  test_material_response_optimizer.py  test_material_response_optimizer_guard.py  test_material_response_optimizer_imports.py  test_material_texturing.py  test_montecito_manifest.py  test_process_renderings_conversion.py  test_processing_capabilities.py  test_prophetic_orchestrator.py  test_security_tooling.py  test_temporal_evolution.py
tools/: gen_legacy_shims.py  montecito_manifest.py  ndarray_typing_migrator.py
