[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "picacho-lane-luts"
version = "0.1.0"
description = "Luxury image and video processing toolkit with LUT collections."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "RC219805" }]
dependencies = [
    "numpy>=1.24,<3",
    "Pillow>=10.0.0,<12",
    "scipy>=1.10,<2",
    "typer>=0.12,<1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "diffusers>=0.21",
    "controlnet-aux>=0.0.7",
    "realesrgan>=0.3",
    "transformers>=4.30",
]
tiff = [
    "tifffile>=2023.7.10",
]
dev = [
    "pytest>=7.4",
    "pytest-xdist>=3.3",
    "flake8>=6.0",
]
video = [
    # FFmpeg is required but must be installed separately
]
all = [
    "torch>=2.0",
    "diffusers>=0.21",
    "controlnet-aux>=0.0.7",
    "realesrgan>=0.3",
    "transformers>=4.30",
    "tifffile>=2023.7.10",
    "pytest>=7.4",
    "pytest-xdist>=3.3",
    "flake8>=6.0",
]

[project.scripts]
luxury-tiff-batch-processor = "luxury_tiff_batch_processor.cli:main"
luxury-video-master-grader = "luxury_video_master_grader:main"
lux-render-pipeline = "lux_render_pipeline:app"
decision-decay-dashboard = "decision_decay_dashboard:main"

[tool.setuptools]
packages = ["luxury_tiff_batch_processor"]
py-modules = ["luxury_video_master_grader", "lux_render_pipeline", "decision_decay_dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "video: marks tests requiring FFmpeg video processing",
]
