# file: pyproject.toml
[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "picacho-lane-luts"
version = "0.1.0"
description = "Luxury image and video processing toolkit with LUT collections."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "RC219805" }]
license = { file = "LICENSE" }
keywords = ["LUT", "image", "video", "render", "diffusers", "esrgan", "luxury"]
dependencies = [
    "numpy>=1.24,<3",
    "Pillow>=10,<12",
    "scipy>=1.10,<2",
    "tifffile>=2023.7.18,<2025",
    "typer>=0.12,<1",
    "tqdm>=4.65,<5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
ai = [
    "torch>=2.0,<3",
    "diffusers>=0.20,<1",
    "controlnet-aux>=0.0.6,<1",
]
upscale = [
    "realesrgan>=0.3.0,<1",
    "opencv-python-headless>=4.8,<5",
]
cv = ["opencv-python-headless>=4.8,<5"]
exr = ["OpenEXR>=2.5,<4", "Imath>=3.1,<4"]

# Full dev toolchain
dev = [
    "pytest>=7.3,<9",
    "pytest-cov>=4,<5",
    "ruff>=0.5,<1",
    "black>=24,<25",
    "mypy>=1.8,<2",
    "types-Pillow",
    "types-requests",
]

# Lean dev toolchain for CI (CPU-only)
dev-lean = [
    "numpy>=1.24,<3",
    "Pillow>=10,<12",
    "scipy>=1.15,<2",
    "tifffile>=2023.7.18,<2025",
    "imagecodecs>=2023.9.18,<2025",
    "tqdm>=4.66,<5",
    "pytest>=8,<9",
    "pytest-cov>=4,<5",
]

# Test toolchain for optimized-ci workflow
test = [
    "pytest>=8,<9",
    "pytest-cov>=4,<5",
    "pytest-xdist>=3,<4",
]

all = [
    "torch>=2.0,<3",
    "diffusers>=0.20,<1",
    "controlnet-aux>=0.0.6,<1",
    "realesrgan>=0.3.0,<1",
    "opencv-python-headless>=4.8,<5",
    "OpenEXR>=2.5,<4",
    "Imath>=3.1,<4",
]

[project.urls]
Homepage = "https://example.com/picacho-lane-luts"
Repository = "https://example.com/picacho-lane-luts/repo"
Issues = "https://example.com/picacho-lane-luts/issues"

[project.scripts]
presence = "picacho_lane_luts.presence_cli_v1_3:main"
mr-blueprint = "picacho_lane_luts.mr_blueprint_cli:main"
process-renderings-750 = "picacho_lane_luts.process_renderings_750:main"
prophetic = "picacho_lane_luts.prophetic_orchestrator:main"
lux-batch = "luxury_tiff_batch_processor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "input_images", "processed_images"]

[tool.setuptools.package-data]
picacho_lane_luts = ["**/*.cube", "**/*.png", "**/*.jpg", "assets/**/*"]
luxury_tiff_batch_processor = [
  "luts/**/*.cube",
  "luts/**/*.CUBE",
  "luts/**/*.png",
  "luts/**/*.jpg",
  "luts/**/*.txt"
]

[tool.pylint.main]
max-args = 8
max-locals = 20
max-branches = 15
max-statements = 60
max-line-length = 127
max-module-lines = 1500

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "duplicate-code",
    "fixme",
]
